[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Robot.gd" type="Script" id=1]
[ext_resource path="res://assets/topdown-shooter/Spritesheet/allSprites_default.png" type="Texture" id=2]
[ext_resource path="res://scenes/RobotAI.gd" type="Script" id=3]
[ext_resource path="res://scenes/BulletEnemy.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]
radius = 296.0

[sub_resource type="CircleShape2D" id=3]
radius = 53.3667

[node name="Robot" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 1 )
bullet_scene = ExtResource( 4 )

[node name="SpriteNormal" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 383, 311, 51, 60 )

[node name="SpriteEvil" type="Sprite" parent="."]
visible = false
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 383, 192, 51, 61 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 0 )
shape = SubResource( 1 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 27, 9 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 32, 9 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="DetectionZone" type="Area2D" parent="AI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/DetectionZone"]
position = Vector2( 176, 0 )
shape = SubResource( 2 )

[node name="PickupZone" type="Area2D" parent="AI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PickupZone"]
shape = SubResource( 3 )

[connection signal="body_entered" from="AI/DetectionZone" to="AI" method="_on_DetectionZone_body_entered"]
[connection signal="area_entered" from="AI/PickupZone" to="AI" method="_on_PickupZone_area_entered"]
[connection signal="body_entered" from="AI/PickupZone" to="AI" method="_on_PickupZone_body_entered"]
